# ai_doc_assistant_langchain

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  deploy.yaml
ai_doc_assistant/: llm_interface.py
ai_doc_assistant_langchain/: document_loader.py  embedding_store.py  ingest.py  rag_chain.py  utils.py
scripts/: ask_docs.py  build_index.py  gradio_app.py  summarize_docs.py  test_loader.py
tests/: test_dummy.py  test_rag.py
